<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res/android">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="pref_location_label">location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">CA 94043</string>
    <string name="temp_prefs_label">Temperature Units</string>
    <string name="temp_pref_key" translatable="false">temp_list</string>
    <string name="pref_units_imperial">imperial</string>
    <string name="pref_units_metric">metric</string>
    <string-array name="temp_pref_list_items">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="temp_pref_list_items_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    <string name="temp_pref_default_value" translatable="false">metric</string>
    <string name="temp_pref_default_summary">Metric</string>
    <string name="view_location_on_map">View location on map</string>
    <string name="view_location_key" translatable="false">view_location</string>
    <string name="view_location">View Location</string>
    <string name="share_icon_title">share</string>
    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>
        , <xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>


    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification
    </string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>


</resources>
