<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<!--
    <CheckBoxPreference
        android:key="example_checkbox"
        android:title="@string/pref_title_social_recommendations"
        android:summary="@string/pref_description_social_recommendations"
        android:defaultValue="true" /> -->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:title="@string/temp_prefs_label"
        android:dialogTitle="@string/temp_prefs_label"
        android:key="@string/temp_pref_key"
        android:defaultValue="@string/temp_pref_default_value"
        android:entries="@array/temp_pref_list_items"
        android:entryValues="@array/temp_pref_list_items_values" />



    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--
    <ListPreference
        android:key="example_list"
        android:title="@string/pref_title_add_friends_to_messages"
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" /> -->

</PreferenceScreen>
